--- a/NoiseTubeInteractive2/res/layout/fragment_display_profile_list_line1.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_display_profile_list_line1.xml
@@ -3,7 +3,9 @@
     android:id="@+id/profile_list_1"
     android:layout_width="match_parent"
     android:layout_height="80dp" 
-    android:padding="6dp">
+    android:layout_margin="10dp"
+    android:padding="6dp"
+    android:background="@drawable/card">
     
     <ImageView
         android:id="@+id/profile_icon"
@@ -28,7 +30,8 @@
         android:textSize="10pt"
         android:textStyle="bold" 
         android:gravity="right"
-        android:layout_margin="6dp"/>
+        android:layout_margin="6dp"
+        />
     
     <TextView
         android:id="@+id/profile_line_line_2"
