--- a/NoiseTubeInteractive2/res/layout/fragment_display_profile_list_line1.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_display_profile_list_line1.xml
@@ -1,50 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/profile_list_1"
     android:layout_width="match_parent"
-    android:layout_height="80dp" 
-    android:layout_margin="10dp"
-    android:padding="6dp"
-    android:background="@drawable/card">
-    
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
     <ImageView
         android:id="@+id/profile_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="6dp"
-        android:contentDescription="@string/profile_icon"
-        android:src="@drawable/ic_launcher" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/profile_background"
+        android:contentDescription="@string/profile_icon" />
 
     <TextView
-        android:id="@+id/profile_line_line_1"
+        android:id="@+id/profile_userName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/profile_icon"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:text="@string/profile_name"
-        android:textSize="10pt"
-        android:textStyle="bold" 
-        android:gravity="right"
-        android:layout_margin="6dp"
-        />
-    
-    <TextView
-        android:id="@+id/profile_line_line_2"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_toRightOf="@id/profile_icon"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/profile_userName"
         android:textAlignment="textEnd"
-        android:text="@string/profile_line_2"
         android:textSize="10pt"
-        android:gravity="right"
-         />
+        android:textStyle="bold" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/profile_email"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="@string/profile_email"
+        android:textAlignment="textEnd"
+        android:textSize="8pt"
+        android:textStyle="italic" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/card2"
+        android:orientation="horizontal" 
+        android:baselineAligned="false">
+
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight=".5"
+            android:orientation="vertical" 
+            android:layout_margin="4dp">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="@string/profile_exp_text" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="@string/profile_lvl_text" />
+            
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="@string/profile_msr_text" />
+            
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:text="@string/profile_time_text" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight=".5" 
+            android:layout_margin="4dp">
+
+            <TextView
+                android:id="@+id/profile_exp"
+                android:text="@string/profile_exp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/profile_lvl"
+                android:text="@string/profile_lvl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_gravity="right" />
+            
+              <TextView
+                android:id="@+id/profile_msr"
+                android:text="@string/profile_msr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_gravity="right" />
+              
+                <TextView
+                android:id="@+id/profile_time"
+                android:text="@string/profile_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_gravity="right" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
