--- a/NoiseTubeInteractive2/res/layout/activity_display_profile.xml
+++ b/NoiseTubeInteractive2/res/layout/activity_display_profile.xml
@@ -3,4 +3,4 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.noisetubeinteractive2.DisplayProfile" />
+    tools:context="com.noisetube.main.DisplayProfile" />
