--- a/NoiseTubeInteractive2/res/layout/fragment_main.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_main.xml
@@ -2,24 +2,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="horizontal"
-    tools:context="com.example.noisetubeinteractive2.MainActivity$PlaceholderFragment" >
+    android:weightSum="2"
+    tools:context="com.noisetube.main.MainActivity$PlaceholderFragment" >
 
-  <EditText 
-        android:id="@+id/edit_message"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/db_lvl"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/edit_message" 
-        android:layout_weight="1"/>
-  
-  <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_send" 
-        android:onClick="sendMessage"/>
+        android:layout_marginBottom="12sp"
+        android:gravity="center"
+        android:hint="@string/no_db_lvl"
+        android:textColor="#FFBB33"
+        android:textSize="14pt"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal" >
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:onClick="sendMessage"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="@string/button_go" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </LinearLayout>
