--- a/NoiseTubeInteractive2/res/layout/fragment_main.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_main.xml
@@ -4,12 +4,23 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:weightSum="2"
+    tools:context="com.noisetube.main.MainActivity$PlaceholderFragment" >
+
+    <!--
+     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="2"
-    tools:context="com.noisetube.main.MainActivity$PlaceholderFragment" >
+    -->
+    <ProgressBar 
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:indeterminate="false"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:progress="50"
+        android:progressDrawable="@drawable/meter_progress"
+        android:rotation="180"/>
 
     <TextView
         android:id="@+id/db_lvl"
@@ -21,7 +32,7 @@
         android:textColor="#FFBB33"
         android:textSize="18pt"
         android:textStyle="bold" />
-    
+
     <TextView
         android:id="@+id/location"
         android:layout_width="fill_parent"
@@ -47,13 +58,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:background="@drawable/btn_blue_small"
             android:gravity="center"
             android:onClick="sendMessage"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/btn_blue_small"
-            android:text="@string/button_go" />
+            android:text="@string/button_go"
+            android:textColor="#FFFFFF" />
 
         <View
             android:layout_width="0dp"
