--- a/NoiseTubeInteractive2/res/layout/fragment_main.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_main.xml
@@ -114,12 +114,43 @@
                 android:text="@string/home_time" />
         </LinearLayout>
 
+        
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
             android:layout_weight=".5"
+            
             android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/home_max_db"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:hint="0 db" />
+
+            <TextView
+                android:id="@+id/home_min_db"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:hint="0 db"/>
+
+            <TextView
+                android:id="@+id/home_avg_db"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:hint="0 db" />
+
+			<Chronometer
+			    android:id="@+id/home_chrono"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="right" 
+			    android:textSize="7pt"  />         
+           
         </LinearLayout>
     </LinearLayout>
 
