--- a/NoiseTubeInteractive2/res/layout/fragment_main.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_main.xml
@@ -57,15 +57,30 @@
             android:layout_weight="1" />
 
         <Button
+            android:id="@+id/home_btn_start"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:background="@drawable/btn_blue_small"
             android:gravity="center"
-            android:onClick="sendMessage"
+            android:onClick="startMeasuring"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="@string/button_go"
+            android:text="@string/home_button_go"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/home_btn_stop"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:visibility="gone"
+            android:background="@drawable/btn_blue_small"
+            android:gravity="center"
+            android:onClick="stopMeasuring"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="@string/home_button_stop"
             android:textColor="#FFFFFF" />
 
         <View
@@ -114,13 +129,11 @@
                 android:text="@string/home_time" />
         </LinearLayout>
 
-        
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
             android:layout_weight=".5"
-            
             android:orientation="vertical" >
 
             <TextView
@@ -135,7 +148,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:hint="0 db"/>
+                android:hint="0 db" />
 
             <TextView
                 android:id="@+id/home_avg_db"
@@ -144,13 +157,12 @@
                 android:layout_gravity="right"
                 android:hint="0 db" />
 
-			<Chronometer
-			    android:id="@+id/home_chrono"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_gravity="right" 
-			    android:textSize="7pt"  />         
-           
+            <Chronometer
+                android:id="@+id/home_chrono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:textSize="7pt" />
         </LinearLayout>
     </LinearLayout>
 
