--- a/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
@@ -9,9 +9,9 @@
     tools:context="com.example.noisetubeinteractive2.PostResult$PlaceholderFragment" >
 
     <LinearLayout
+        android:id="@+id/post_layout_points"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:background="@drawable/card2"
         android:baselineAligned="false"
         android:orientation="horizontal" >
@@ -97,6 +97,40 @@
                 android:layout_gravity="right"
                 android:hint="0" />
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/post_layout_points"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/card2"
+        android:orientation="vertical" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Progress"
+            android:layout_marginBottom="5dp"
+            android:textSize="9pt"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:id="@+id/post_progressbar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="10dp"
+            android:indeterminate="false"
+            android:progress="40" />
+        
+         <TextView
+            android:id="@+id/post_progress_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="688/1132"
+            android:textStyle="italic" />
     </LinearLayout>
 
 </RelativeLayout>
