--- a/NoiseTubeInteractive2/res/layout/fragment_main.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_main.xml
@@ -61,7 +61,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="@drawable/btn_blue_small"
+            android:background="@drawable/btn_blue_flat"
             android:gravity="center"
             android:onClick="startMeasuring"
             android:paddingLeft="8dp"
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:visibility="gone"
-            android:background="@drawable/btn_blue_small"
+            android:background="@drawable/btn_blue_flat"
             android:gravity="center"
             android:onClick="stopMeasuring"
             android:paddingLeft="8dp"
