--- a/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
@@ -181,21 +181,21 @@
             android:orientation="vertical"
             android:paddingTop="5dp" >
 
-            <Button
+ <!--            <Button
                 android:id="@+id/post_home"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_blue_small"
+                android:background="@drawable/btn_blue_flat"
                 android:gravity="center"
                 android:onClick="startHome"
                 android:text="Home"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF" /> -->
 
             <Button
                 android:id="@+id/post_leaderboard"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_blue_small"
+                android:background="@drawable/btn_blue_flat"
                 android:gravity="center"
                 android:onClick="startLeaderboard"
                 android:text="Leaderboard"
@@ -205,7 +205,7 @@
                 android:id="@+id/post_badges"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_blue_small"
+                android:background="@drawable/btn_blue_flat"
                 android:gravity="center"
                 android:onClick="startBadges"
                 android:text="Badges"
