--- a/NoiseTubeInteractive2/res/layout/activity_main.xml
+++ b/NoiseTubeInteractive2/res/layout/activity_main.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.noisetube.main.MainActivity"
+    tools:context="com.example.noisetubeinteractive2.MainActivity"
     tools:ignore="MergeRootFrame" />
