--- a/NoiseTubeInteractive2/res/layout/activity_new_profile.xml
+++ b/NoiseTubeInteractive2/res/layout/activity_new_profile.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.noisetube.main.NewProfileActivity"
+    tools:context="com.example.noisetubeinteractive2.ProfileActivity"
     tools:ignore="MergeRootFrame" />
