--- a/NoiseTubeInteractive2/res/layout/activity_post_result.xml
+++ b/NoiseTubeInteractive2/res/layout/activity_post_result.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.noisetubeinteractive2.PostResult"
+    tools:context="com.example.noisetubeinteractive2.PostResultActivity"
     tools:ignore="MergeRootFrame" />
