--- a/NoiseTubeInteractive2/res/layout/fragment_poi_list_item.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_poi_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:orientation="horizontal" >
@@ -26,6 +26,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:paddingBottom="5dp"
             android:text="Vub onderzoek"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
@@ -43,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
+			android:layout_below="@id/poi_item_title"
             android:paddingRight="6dp"
             android:text="Total Multipier: " />
 
@@ -75,7 +76,7 @@
             android:text="50 " />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/poi_item_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
