--- a/NoiseTubeInteractive2/res/layout/fragment_leaderboard_score_item.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_leaderboard_score_item.xml
@@ -2,25 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/leaderboard_username"
-        android:layout_width="0dp"
+        android:id="@+id/leaderboard_rank"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:text="Large Text"
+        android:paddingLeft="10dp"
+        android:text="1"
+        android:textColor="@android:color/secondary_text_light_nodisable"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/leaderboard_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:text="Tim Witters"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/leaderboard_points"
-        android:layout_width="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:gravity="right"
-        android:layout_weight=".5"
-        android:text="Large Text"
+        android:text="39"
+        android:paddingRight="5dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </LinearLayout>
