--- a/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/post_fragment"
     tools:context="com.example.noisetubeinteractive2.PostResult$PlaceholderFragment" >
 
     <RelativeLayout
@@ -196,6 +197,16 @@
                 android:gravity="center"
                 android:onClick="startBadges"
                 android:text="Badges"
+                android:textColor="#FFFFFF" />
+            
+             <Button
+                android:id="@+id/post_share"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_blue_flat"
+                android:gravity="center"
+                android:onClick="startShare"
+                android:text="Share"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
     </RelativeLayout>
