--- a/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_post_result.xml
@@ -198,16 +198,17 @@
                 android:onClick="startBadges"
                 android:text="Badges"
                 android:textColor="#FFFFFF" />
-            
-             <Button
+
+            <Button
                 android:id="@+id/post_share"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_blue_flat"
                 android:gravity="center"
                 android:onClick="startShare"
-                android:text="Share"
+                android:text="Share (+50 points)"
                 android:textColor="#FFFFFF" />
+
         </LinearLayout>
     </RelativeLayout>
 
