--- a/NoiseTubeInteractive2/res/layout/fragment_poi_list_item.xml
+++ b/NoiseTubeInteractive2/res/layout/fragment_poi_list_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:onClick="startMap" >
 
     <ImageView
         android:id="@+id/poi_icon"
