--- a/NoiseTubeInteractive2/res/menu/main.xml
+++ b/NoiseTubeInteractive2/res/menu/main.xml
@@ -22,5 +22,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item
+        android:id="@+id/action_login"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Login"/>
 
 </menu>
